# env_notify_telegram

./: Cargo.toml  README.md  deny.toml
.github/workflows/: rust.yml
src/: cli.rs  main.rs  tgapi.rs
