[package]
name = "env_notify_telegram"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0" # Ubuntu 24.04 (+ Debian 13)
license = "GPL-3.0"
authors = ["Alexander A. Klimov <a@kli.mov>"]

[dependencies]
humantime = "2.1.0"
percent-encoding-rfc3986 = "0.1.3"

[dependencies.serde]
version = "1.0.218"
features = ["derive"]

[dependencies.ureq]
version = "3.0.8"
features = ["json"]
