[package]
name = "env_notify_telegram"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.0"
license = "GPL-3.0"
authors = ["Alexander A. Klimov <a@kli.mov>"]

[dependencies]
humantime = "2.2.0"
percent-encoding-rfc3986 = "0.1.3"

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.ureq]
version = "3.0.11"
features = ["json"]
